# gmail-transaction-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
lambdas/dashboard/: handler.py  pyproject.toml
lambdas/ingestion/: handler.py  pyproject.toml
lambdas/transform/: handler.py  pyproject.toml
scripts/: backfill_transform.py  build_lambdas.sh  deploy.sh  full_backfill.py  gmail_watch.py  renew_watch.py  setup_terraform_backend.sh  test_ingestion.py
terraform/: api_gateway.tf  dashboard.tf  dynamodb.tf  iam.tf  lambda.tf  locals.tf  main.tf  outputs.tf  s3.tf  ssm.tf  terraform.tfvars.example  variables.tf
