[project]
name = "gmail-transaction-pipeline"
version = "0.1.0"
description = "Event-driven Gmail → AWS transaction pipeline"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "google-auth>=2.29",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.126",
    "beautifulsoup4>=4.12",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"